--- a/html/default.css
+++ b/html/default.css
@@ -17,7 +17,7 @@
 
 /*Tablet&Desktop */
 
-@media only all and (min-width:768px){body{background : green;}
+@media only all and (min-width:768px){body{background : red;}
 
 
 /*Tablet*/
